cmake_minimum_required(VERSION 4.0)
project(Blitz3D CXX)

add_subdirectory(asm_makeinsts)
# add_subdirectory(bblaunch)
# add_subdirectory(bbruntime)
# add_subdirectory(bbruntime_dll)
# add_subdirectory(blitz)
# add_subdirectory(blitz3d)
# add_subdirectory(blitzide)
# add_subdirectory(compiler)
# add_subdirectory(config)
# add_subdirectory(debugger)
# add_subdirectory(gxruntime)
# add_subdirectory(innosetup)
# add_subdirectory(linker)
# add_subdirectory(linker_dll)
# add_subdirectory(stdutil)
# add_subdirectory(utils)
